--- a/public/assets/css/a11yc_issue.css
+++ b/public/assets/css/a11yc_issue.css
@@ -192,6 +192,10 @@ body > :last-child
 		top: 7mm;
 		right: 10mm;
 	}
+	.issue_header
+	{
+		display: none !important;
+	}
 	.screenshot img
 	{
 		max-height: 33vh;
